# utils

./: .gitignore  CMakePresets.json  portfile.cmake  vcpkg.json
.github/templates/: portfile.cmake.in
.github/workflows/: build-test.yml  format.yml  release.yml  update-vcpkg.yml
scripts/.debian/: setup_workspace.sh
src/: CMakeLists.txt  main.cpp
src/Config/: IConfigProvider.h
src/Config/ConfigParser/: ConfigParser.cpp  JsonConfigParser.h
src/Logging/: CMakeLists.txt  LogLevel.h  Logger.cpp  Logger.h  LoggerConfig.h  LoggerMacros.h
test/src/: CMakeLists.txt  Mocks.h  testConfigProvider.cpp  testConfigPublisher.cpp  testJsonConfigParser.cpp  testLogging.cpp
versions/: baseline.json
versions/u-/: utils.json
